# artag-deprecated

./: CMakeLists.txt  INSTALL  README  THANKS
astups/: CMakeLists.txt  main.cpp  old_main.txt
include/ARToolKitPlus/: ARToolKitPlus.h  Logger.h  TrackerMultiMarkerImpl.h  TrackerSingleMarkerImpl.h  ar.h  arMulti.h  matrix.h  vector.h
include/ARToolKitPlus/extra/: BCH.h
sample/: CMakeLists.txt
sample/multi/: CMakeLists.txt
sample/simple/: CMakeLists.txt
share/: artag.doxy  uninstall.cmake.in
src/: CMakeLists.txt  CameraAdvImpl.cxx  CameraImpl.cxx  MemoryManager.cpp  MemoryManagerMemMap.cpp  TrackerSingleMarkerImpl.cxx
src/core/: arBitFieldPattern.cxx  arDetectMarker.cxx  arGetCode.cxx  arGetTransMat.cxx  arGetTransMat2.cxx  arGetTransMat3.cxx  arLabeling.cxx  arMultiActivate.cxx  arMultiGetTransMat.cxx  arMultiReadConfigFile.cxx  arUtil.cxx  mPCA.cxx  matrix.cxx  paramDecomp.cxx  paramDistortion.cxx  paramFile.cxx  rppGetTransMat.cxx  rppMultiGetTransMat.cxx  vector.cxx
src/extra/: FixedPoint.cpp  Profiler.cpp
src/librpp/: librpp.cpp  librpp.h  rpp.cpp  rpp.h  rpp_svd.cpp  rpp_vecmat.h
src/math/: artkpFixedBase_generic.h  artkpFloat_fixed.h
tools/: CMakeLists.txt
tools/CameraCalib/: CMakeLists.txt
tools/CameraCalib/src/: calib_dist.cpp  calib_inp.cpp
tools/IdPatGen/: CMakeLists.txt
tools/IdPatGen/src/: main.cpp
tools/IdPatGen/src/PN/: ImageTool.cpp  ImageTool.h
